# Timer-project

./: .gitignore  .pre-commit-config.yaml  json-structure.json  pyproject.toml
data/: data.json
project_timer/: Employees.json  FileManager.py  __init__.py  combiner.py  file_manager.py  project.py  ss.py  task.py  timer.py  timer_backup.py  user.py  write_json.py
project_timer/user/: user.py
tests/: Employees.json  conftest.py  test_project_timer.py  test_task.py  test_timer.py  test_user.py
